[package]
name = "mago-reflector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true  }
mago-span = { workspace = true  }
mago-ast = { workspace = true  }
mago-ast-utils = { workspace = true }
mago-walker = { workspace = true  }
mago-source = { workspace = true  }
mago-semantics = { workspace = true  }
mago-typing = { workspace = true  }
mago-reflection = { workspace = true }
ahash = { workspace = true }
