[package]
name = "mago-reflector"
description = "Allows introspection of PHP code structures, enabling tools to examine classes, interfaces, methods, and other elements for advanced analysis."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-names = { workspace = true }
mago-interner = { workspace = true }
mago-span = { workspace = true }
mago-parser = { workspace = true }
mago-ast = { workspace = true }
mago-ast-utils = { workspace = true }
mago-walker = { workspace = true }
mago-source = { workspace = true }
mago-typing = { workspace = true }
mago-reporting = { workspace = true }
mago-reflection = { workspace = true }
ahash = { workspace = true }
