[package]
name = "mago-reporting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ahash = { workspace = true }
serde = { workspace = true }
codespan-reporting = { workspace = true }
mago-span = { path = "../span" }
mago-source = { path = "../source" }
mago-fixer = { path = "../fixer" }
