[package]
name = "mago-reporting"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-span = { workspace = true }
mago-source = { workspace = true }
mago-fixer = { workspace = true }
ahash = { workspace = true }
serde = { workspace = true }
codespan-reporting = { workspace = true }
