[package]
name = "mago-semantics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-fixer = { path = "../fixer" }
mago-reporting = { path = "../reporting" }
mago-interner = { path = "../interner" }
mago-parser = { path = "../parser" }
mago-walker = { path = "../walker" }
mago-span = { path = "../span" }
mago-ast = { path = "../ast" }
mago-ast-utils = { path = "../ast-utils" }
mago-names = { path = "../names" }
mago-source = { path = "../source" }
mago-symbol-table = { path = "../symbol-table" }
serde = { workspace = true }
