[package]
name = "mago-semantics"
description = "Performs semantic analysis on PHP code, interpreting the AST to check correctness, resolve references, and enforce language rules."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-fixer = { workspace = true }
mago-reporting = { workspace = true }
mago-interner = { workspace = true }
mago-parser = { workspace = true }
mago-walker = { workspace = true }
mago-span = { workspace = true }
mago-ast = { workspace = true }
mago-ast-utils = { workspace = true }
mago-names = { workspace = true }
mago-source = { workspace = true }
mago-symbol-table = { workspace = true }
serde = { workspace = true }
