[package]
name = "mago-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { path = "../interner" }
mago-source = { path = "../source" }
mago-reporting = { path = "../reporting" }
mago-semantics = { path = "../semantics" }
mago-linter = { path = "../linter" }
mago-reflection = { path = "../reflection" }
mago-reflector = { path = "../reflector" }
mago-span = { path = "../span" }
mago-feedback = { path = "../feedback" }
mago-formatter = { path = "../formatter" }
mago-ast = { path = "../ast" }
mago-parser = { path = "../parser" }
tokio = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
async-walkdir = { workspace = true }
futures = { workspace = true }
glob-match = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
num_cpus = { workspace = true }
