[package]
name = "mago-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
mago-source = { workspace = true }
mago-reporting = { workspace = true }
mago-semantics = { workspace = true }
mago-linter = { workspace = true }
mago-reflection = { workspace = true }
mago-reflector = { workspace = true }
mago-span = { workspace = true }
mago-feedback = { workspace = true }
mago-formatter = { workspace = true }
mago-ast = { workspace = true }
mago-parser = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
async-walkdir = { workspace = true }
futures = { workspace = true }
glob-match = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
num_cpus = { workspace = true }
