[package]
name = "mago-service"
description = "Integrates multiple PHP tooling capabilities—such as parsing, linting, and formatting—into a unified interface for easier tool orchestration."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
mago-source = { workspace = true }
mago-reporting = { workspace = true }
mago-semantics = { workspace = true }
mago-linter = { workspace = true }
mago-reflection = { workspace = true }
mago-reflector = { workspace = true }
mago-span = { workspace = true }
mago-feedback = { workspace = true }
mago-formatter = { workspace = true }
mago-ast = { workspace = true }
mago-parser = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
async-walkdir = { workspace = true }
futures = { workspace = true }
glob-match = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
num_cpus = { workspace = true }
diffy = { workspace = true }
