[package]
name = "mago-source"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
codespan-reporting = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
