[package]
name = "mago-source"
description = "Manages PHP source files by providing functions for loading, reading, and referencing PHP code, making it easier to work with file-based inputs."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
serde = { workspace = true }
ahash = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
memchr = { workspace = true }