[package]
name = "mago-span"
description = "Tracks exact character positions in source code, making it easier to report precise errors, warnings, and other diagnostics."
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
mago-source = { workspace = true }
serde = { workspace = true }
