[package]
name = "fennec-symbol-table"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
fennec-interner = { path = "../interner" }
fennec-span = { path = "../span" }
fennec-ast = { path = "../ast" }
fennec-walker = { path = "../walker" }
fennec-source = { path = "../source" }
serde = { workspace = true }
strum = { workspace = true }
