[package]
name = "mago-symbol-table"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { path = "../interner" }
mago-span = { path = "../span" }
mago-ast = { path = "../ast" }
mago-walker = { path = "../walker" }
mago-source = { path = "../source" }
serde = { workspace = true }
strum = { workspace = true }
