[package]
name = "mago-symbol-table"
description = "A library for discovering and working with symbols in PHP code."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
mago-interner = { workspace = true }
mago-span = { workspace = true }
mago-ast = { workspace = true }
mago-walker = { workspace = true }
mago-source = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
