[package]
name = "mago-token"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mago-span = { workspace = true }
mago-interner = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
